--- a/VRChat/94/959494.html
+++ b/VRChat/94/959494.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/23586338c84e10d4269f.js" defer=
     "defer" nonce=
-    "IVKADtlkVIK6RuhEUMyaliCWmYiWpmC8FOeqZbrXEyk="></script>
+    "xACpI0qc8sFcG/jypIEIatbFJmjVz1fIdLDn+89LDSY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【代理出品】VRChatで100時間暮らして分かったVR教育 byチシ（千知）","description":"代理出品です。\nチシさん(@tishi_Za)がTwitterでマッハ新書のための草案書いたって公開してたので軽率に編集して出版ハラスメントしました。\n\n手が滑ってpdfとepubが生成されたのでTwitterに書いたら好きにしろって言われたので代理出品します。","url":"https://booth.pm/ja/items/959494","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/10390c93-8813-4f7d-bd07-4c26c97d7a3b/i/959494/21cd00e2-9a39-4e05-a200-f671efbc40dc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IVKADtlkVIK6RuhEUMyaliCWmYiWpmC8FOeqZbrXEyk="></script>
+    nonce="xACpI0qc8sFcG/jypIEIatbFJmjVz1fIdLDn+89LDSY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -476,7 +476,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;},{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;},{&quot;label&quot;:&quot;COMITIA142&quot;,&quot;value&quot;:&quot;comitia142&quot;},{&quot;label&quot;:&quot;立体乱舞3&quot;,&quot;value&quot;:&quot;rittairanbu3&quot;}]"
+    "[{&quot;label&quot;:&quot;#エアブー230108&quot;,&quot;value&quot;:&quot;air-boo-0108&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪123&quot;,&quot;value&quot;:&quot;comiccity-osaka123&quot;},{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;},{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
