--- a/VRChat/53/955653.html
+++ b/VRChat/53/955653.html
@@ -4,8 +4,8 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】 - 10282's works / 穣津ペグ's ワークス -
-      BOOTH
+      【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】 - 10282's works / 穣津ペグ's
+      ワークス - BOOTH
     </title>
     <meta name="description" content=
     "人型ボクセル（女性型）を作成できるボクセル素体です。 MagicaVoxelで編集できるファイル（.vox）をダウンロードできます。 素体キャラクターの名前は「宇留間わかば（うるま・わかば）」です。 ◆現在のバージョン：1.0.1 VRChatでの使用を想定していますが、ボーンの設定やFBXファイルへの変換はご自身でご対応ください。 MagicaVoxelの作業風景を撮影した動画を埋め込んでいます。 参考になると幸いです。">
@@ -15,14 +15,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】 - 10282's works / 穣津ペグ's ワークス - BOOTH">
+    "【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】 - 10282's works / 穣津ペグ's ワークス - BOOTH">
     <meta name="twitter:description" content=
     "人型ボクセル（女性型）を作成できるボクセル素体です。 MagicaVoxelで編集できるファイル（.vox）をダウンロードできます。 素体キャラクターの名前は「宇留間わかば（うるま・わかば）」です。 ◆現在のバージョン：1.0.1 VRChatでの使用を想定していますが、ボーンの設定やFBXファイルへの変換はご自身でご対応ください。 MagicaVoxelの作業風景を撮影した動画を埋め込んでいます。 参考になると幸いです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/6ae1d155-ba1f-4238-ba47-46a51f2157da/i/955653/b52603e4-ba2d-42dc-a535-ed55db049759_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】 - 10282's works / 穣津ペグ's ワークス - BOOTH">
+    "【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】 - 10282's works / 穣津ペグ's ワークス - BOOTH">
     <meta property="og:description" content=
     "人型ボクセル（女性型）を作成できるボクセル素体です。 MagicaVoxelで編集できるファイル（.vox）をダウンロードできます。 素体キャラクターの名前は「宇留間わかば（うるま・わかば）」です。 ◆現在のバージョン：1.0.1 VRChatでの使用を想定していますが、ボーンの設定やFBXファイルへの変換はご自身でご対応ください。 MagicaVoxelの作業風景を撮影した動画を埋め込んでいます。 参考になると幸いです。">
     <meta property="og:image" content=
@@ -78,9 +78,9 @@
     <script src=
     "https://asset.booth.pm/assets/23586338c84e10d4269f.js" defer=
     "defer" nonce=
-    "NaamLTrtBaEp32nzIfV/4FTh11Y8fJFmbreUzFl/3Rs="></script>
+    "Cf6c3z82jxBFg+0ZIiSCitz+iXSQrgWGkMBxLZwc4/k="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】","description":"人型ボクセル（女性型）を作成できるボクセル素体です。\nMagicaVoxelで編集できるファイル（.vox）をダウンロードできます。\n\n素体キャラクターの名前は「宇留間わかば（うるま・わかば）」です。\n◆現在のバージョン：1.0.1\n\nVRChatでの使用を想定していますが、ボーンの設定やFBXファイルへの変換はご自身でご対応ください。\n\nMagicaVoxelの作業風景を撮影した動画を埋め込んでいます。\n参考になると幸いです。","url":"https://booth.pm/ja/items/955653","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6ae1d155-ba1f-4238-ba47-46a51f2157da/i/955653/b52603e4-ba2d-42dc-a535-ed55db049759_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】","description":"人型ボクセル（女性型）を作成できるボクセル素体です。\nMagicaVoxelで編集できるファイル（.vox）をダウンロードできます。\n\n素体キャラクターの名前は「宇留間わかば（うるま・わかば）」です。\n◆現在のバージョン：1.0.1\n\nVRChatでの使用を想定していますが、ボーンの設定やFBXファイルへの変換はご自身でご対応ください。\n\nMagicaVoxelの作業風景を撮影した動画を埋め込んでいます。\n参考になると幸いです。","url":"https://booth.pm/ja/items/955653","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6ae1d155-ba1f-4238-ba47-46a51f2157da/i/955653/b52603e4-ba2d-42dc-a535-ed55db049759_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NaamLTrtBaEp32nzIfV/4FTh11Y8fJFmbreUzFl/3Rs="></script>
+    nonce="Cf6c3z82jxBFg+0ZIiSCitz+iXSQrgWGkMBxLZwc4/k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -147,7 +147,7 @@
                           </div>
                           <h2 class=
                           "u-tpg-title1 u-mt-0 u-text-wrap u-mb-400">
-                            ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】
+                            【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】
                           </h2>
                           <div class=
                           "u-text-assertive u-tpg-caption1"></div>
@@ -242,8 +242,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】" class=
-                            "market-item-detail-item-image"
+                            "【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】"
+                            class="market-item-detail-item-image"
                             data-origin=
                             "https://booth.pximg.net/6ae1d155-ba1f-4238-ba47-46a51f2157da/i/955653/b52603e4-ba2d-42dc-a535-ed55db049759.png"
                             src=
@@ -254,8 +254,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】" class=
-                            "market-item-detail-item-image"
+                            "【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/6ae1d155-ba1f-4238-ba47-46a51f2157da/i/955653/8e259d6d-62f3-4118-8b8b-f459cdd5d8fe_base_resized.jpg"
                             data-origin=
@@ -266,8 +266,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】" class=
-                            "market-item-detail-item-image"
+                            "【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/6ae1d155-ba1f-4238-ba47-46a51f2157da/i/955653/4cdb8058-b129-4ba8-bead-9641e6350b73_base_resized.jpg"
                             data-origin=
@@ -278,8 +278,8 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】" class=
-                            "market-item-detail-item-image"
+                            "【更新終了】ボクセルヒューマノイド素体（.vox）宇留間わかば【無料】"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/6ae1d155-ba1f-4238-ba47-46a51f2157da/i/955653/b48e50eb-d62b-49be-86cc-ae7d4331899d_base_resized.jpg"
                             data-origin=
@@ -406,7 +406,7 @@
             </div>
           </aside>
           <script id="json_modules" type="application/json">
-          {"modules":[{"type":"media","content":"\u003ciframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/EXXLNU91PSM?start=60\" frameborder=\"0\" allowfullscreen sandbox=\"allow-scripts allow-same-origin allow-popups allow-presentation\"\u003e\u003c/iframe\u003e"},{"type":"text","title":"ファイル内容","content":"・サイズ\n126x64x126（.vox）\n\n・voxファイル\nvoxel_humanoid：\nレイヤーを分割しているvoxファイルです。レイヤー構成は次項の「レイヤー構成」を参照ください。\n\nvoxel_humanoid_simple：\nレイヤーを結合したvoxファイルです。\nレイヤー機能の使い方がわからない、不慣れである場合はこちらをご利用ください。\n\n・レイヤー構成\nHair：髪の毛です。ミディアムヘアの長さです。\nLong-T：ロングTシャツです。\nSkirt：スカートです。\nLoafer：靴です。\nHumanoid：メイン素体です。下着部分に色をつけていますが、塗りつぶせば消すことができます。"},{"type":"text","title":"VRChat用の留意事項","content":"・関節について\nOBJ出力の場合、ボーン設定時に色の濃い部分を関節にすると比較的きれいに曲がります。\n\n・肩幅について\nボクセルの場所通りに肩の位置を設定すると恰幅がよくなる場合があります。中心に近いほうが丁度よくなります。\n\n・出力について\nEdit画面にて、すべてのレイヤーを選択（Ctrl+A）し、画面右上辺りにある「union」ボタンを押すとボクセルがすべて結合することができます。バックアップは忘れないようにしてください。\n\n・ポリゴン数について\nデフォルトの状態でOBJ形式で出力した場合、約15,000ポリゴンあります。\n必要に応じて削るなど対応を行なってください。\n\n・素体について\nデフォルトの状態では、手のひらの「中指」と「薬指」は省略しています。必要に応じて別途対応してください。\n\n・高さについて\nBlenderで0.05倍、Unityで0.25倍で表示すると丁度よい高さ（約150cm）になります。\n\n・目線について\nVRC_Avatar_Descriptor＞View Positionは、「X:0, Y:1.33, Z:0.1」を目安にしてください。"},{"type":"text","title":"利用規約","content":"2018.8.6 制定\n\n本ボクセル素体を利用した時点で利用規約に同意したものとみなします。\n利用規約は本販売ページに記載されている最新の内容が常に適用されます。\n\n本ボクセル素体は個人に限り自由に利用できます。\n改変したボクセルおよびアバターについては、無料かつvox形式以外に限り配布、譲渡することができます。\nその場合は、利用規約内に以下の文言を追加してください。\n――――――――――――――――――――――――――――――――――\n本ボクセルは「穣津ペグ's ワークス( https://jo2peg.booth.pm/ )」の\n「ボクセルヒューマノイド素体（.vox）宇留間わかば」を利用しています。\n本利用規約に相違があった場合、 https://jo2peg.booth.pm/items/955653 の内容を優先します。\n\n(C) 穣津ペグ/JO2PEG https://twitter.com/jo2peg \n――――――――――――――――――――――――――――――――――\n\n本ボクセル素体の著作権は制作者である穣津ペグに帰属します。\n本ボクセル素体が再利用できる形での再配布はおやめください。\n\n穣津ペグが許可をした場合を除き、商用利用（本ボクセル素体を利用して金品等を得る行為）は禁止いたします。\nなお、下記の場合についてはこの限りではありません。\n・副次的に商用目的の写真、映像に映り込んでしまった場合\n（主目的の場合は商用利用とみなします。）\n不明瞭な点がありましたら穣津ペグ（ https://twitter.com/jo2peg ） にお問い合わせください。\n\n特定個人・団体への誹謗中傷目的での利用は禁止いたします。"},{"type":"text","title":"免責事項","content":"穣津ペグは、本ボクセル素体の利用により発生した問題に対して一切の責任を負いません。\n利用規約の内容は予告なく変更する場合があります。"}]}
+          {"modules":[{"type":"media","content":"\u003ciframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/EXXLNU91PSM?start=60\" frameborder=\"0\" allowfullscreen sandbox=\"allow-scripts allow-same-origin allow-popups allow-presentation\"\u003e\u003c/iframe\u003e"},{"type":"text","title":"連絡事項","content":"2022.12.24\n【更新終了モデル】\n本モデルは2023年以降の対応（VCC等）を行いません。あらかじめご了承ください。\nご愛顧いただき誠にありがとうございました。"},{"type":"text","title":"ファイル内容","content":"・サイズ\n126x64x126（.vox）\n\n・voxファイル\nvoxel_humanoid：\nレイヤーを分割しているvoxファイルです。レイヤー構成は次項の「レイヤー構成」を参照ください。\n\nvoxel_humanoid_simple：\nレイヤーを結合したvoxファイルです。\nレイヤー機能の使い方がわからない、不慣れである場合はこちらをご利用ください。\n\n・レイヤー構成\nHair：髪の毛です。ミディアムヘアの長さです。\nLong-T：ロングTシャツです。\nSkirt：スカートです。\nLoafer：靴です。\nHumanoid：メイン素体です。下着部分に色をつけていますが、塗りつぶせば消すことができます。"},{"type":"text","title":"VRChat用の留意事項","content":"・関節について\nOBJ出力の場合、ボーン設定時に色の濃い部分を関節にすると比較的きれいに曲がります。\n\n・肩幅について\nボクセルの場所通りに肩の位置を設定すると恰幅がよくなる場合があります。中心に近いほうが丁度よくなります。\n\n・出力について\nEdit画面にて、すべてのレイヤーを選択（Ctrl+A）し、画面右上辺りにある「union」ボタンを押すとボクセルがすべて結合することができます。バックアップは忘れないようにしてください。\n\n・ポリゴン数について\nデフォルトの状態でOBJ形式で出力した場合、約15,000ポリゴンあります。\n必要に応じて削るなど対応を行なってください。\n\n・素体について\nデフォルトの状態では、手のひらの「中指」と「薬指」は省略しています。必要に応じて別途対応してください。\n\n・高さについて\nBlenderで0.05倍、Unityで0.25倍で表示すると丁度よい高さ（約150cm）になります。\n\n・目線について\nVRC_Avatar_Descriptor＞View Positionは、「X:0, Y:1.33, Z:0.1」を目安にしてください。"},{"type":"text","title":"利用規約","content":"2018.8.6 制定\n\n本ボクセル素体を利用した時点で利用規約に同意したものとみなします。\n利用規約は本販売ページに記載されている最新の内容が常に適用されます。\n\n本ボクセル素体は個人に限り自由に利用できます。\n改変したボクセルおよびアバターについては、無料かつvox形式以外に限り配布、譲渡することができます。\nその場合は、利用規約内に以下の文言を追加してください。\n――――――――――――――――――――――――――――――――――\n本ボクセルは「穣津ペグ's ワークス( https://jo2peg.booth.pm/ )」の\n「ボクセルヒューマノイド素体（.vox）宇留間わかば」を利用しています。\n本利用規約に相違があった場合、 https://jo2peg.booth.pm/items/955653 の内容を優先します。\n\n(C) 穣津ペグ/JO2PEG https://twitter.com/jo2peg \n――――――――――――――――――――――――――――――――――\n\n本ボクセル素体の著作権は制作者である穣津ペグに帰属します。\n本ボクセル素体が再利用できる形での再配布はおやめください。\n\n穣津ペグが許可をした場合を除き、商用利用（本ボクセル素体を利用して金品等を得る行為）は禁止いたします。\nなお、下記の場合についてはこの限りではありません。\n・副次的に商用目的の写真、映像に映り込んでしまった場合\n（主目的の場合は商用利用とみなします。）\n不明瞭な点がありましたら穣津ペグ（ https://twitter.com/jo2peg ） にお問い合わせください。\n\n特定個人・団体への誹謗中傷目的での利用は禁止いたします。"},{"type":"text","title":"免責事項","content":"穣津ペグは、本ボクセル素体の利用により発生した問題に対して一切の責任を負いません。\n利用規約の内容は予告なく変更する場合があります。"}]}
           </script>
         </div>
       </main>
@@ -590,7 +590,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;},{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;},{&quot;label&quot;:&quot;COMITIA142&quot;,&quot;value&quot;:&quot;comitia142&quot;},{&quot;label&quot;:&quot;立体乱舞3&quot;,&quot;value&quot;:&quot;rittairanbu3&quot;}]"
+    "[{&quot;label&quot;:&quot;#エアブー230108&quot;,&quot;value&quot;:&quot;air-boo-0108&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪123&quot;,&quot;value&quot;:&quot;comiccity-osaka123&quot;},{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;},{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
